Bug #13266 Online adding of MySQLD causes cluster to crash - check node type, if configuration has not bee updated, type will be undefined, and conenction will be refused