storage/ndb/src/mgmsrv/MgmtSrvr.hpp
@@ -520,7 +520,7 @@ private:
    */
   int getBlockNumber(const BaseString &blockName);
 
-  int alloc_node_id_req(Uint32 free_node_id);
+  int alloc_node_id_req(NodeId free_node_id, enum ndb_mgm_node_type type);
   //**************************************************************************
   
   int _blockNumber;
